--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <select id="select-size" name="size">
                         <option value="3">3x3</option>
                         <option value="4">4x4</option>
-                        <option value="5">5x5</option>
+                        <option value="5" selected>5x5</option>
                     </select>
                 </div>
                 <label class="player-input" for="player1">Jugador 1 Nombre:</label>
