--- a/board.html
+++ b/board.html
@@ -48,6 +48,7 @@
                 <button class="input-button" onclick="proxima();">PROXIMA BOLA</button>
             </div>
         </div>
+        <div id="button-players">players</div>
         
     </div>
     <!-- <script src="./script.js"></script> -->
