--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
                     </select>
                 </div>
                 <label class="player-input" for="player1">Jugador 1 Nombre:</label>
-                <input class="player-input player-name" type="text" id="player1" name="player-1" value="Andres" required>
+                <input class="player-input player-name" type="text" id="player1" name="player-1" value="" required>
 
                 <label class="player-input" for="player2">Jugador 2 Nombre:</label>
-                <input class="player-input player-name" type="text" id="player2" name="player-2" value="Juan" required>
+                <input class="player-input player-name" type="text" id="player2" name="player-2" value="" required>
 
                 <label class="player-input" for="player3">Jugador 3 Nombre:</label>
-                <input class="player-input player-name" type="text" id="player3" name="player-3" value="Pedro" required>
+                <input class="player-input player-name" type="text" id="player3" name="player-3" value="" required>
 
                 <label class="player-input" for="player4">Jugador 4 Nombre:</label>
-                <input class="player-input player-name" type="text" id="player4" name="player-4" value="Luis" required>
+                <input class="player-input player-name" type="text" id="player4" name="player-4" value="" required>
 
                 <input class="input-button" type="submit" value="Comenzar">
             </form>
